deploy/mgmt/daemonset-worker.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: angryduck-worker
  namespace: angryduck
  labels:
    app.kubernetes.io/env: mgmt
    app.kubernetes.io/name: angryduck
    app.kubernetes.io/component: worker
spec:
  selector:
    matchLabels:
      app.kubernetes.io/env: mgmt
      app.kubernetes.io/name: angryduck
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/env: mgmt
        app.kubernetes.io/name: angryduck
        app.kubernetes.io/component: worker
    spec:
      serviceAccountName: angryduck-worker
      hostNetwork: true
      hostPID: true
      dnsPolicy: ClusterFirstWithHostNet
      imagePullSecrets:
        - name: gitlab-docker-registry
      containers:
        - name: worker
          image: registry.internal-registry.example.com/devops/generic/angry-duck-worker:1.4.0
          ports:
            - containerPort: 18081
              name: http
          volumeMounts:
            - name: registry-creds
              mountPath: /etc/angryduck/registry-creds
              readOnly: true
          readinessProbe:
            httpGet:
              path: /healthz
              port: 18081
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 18081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: "1"
              memory: 192Mi
          securityContext:
            privileged: true
      volumes:
        - name: registry-creds
          secret:
            secretName: gitlab-registry-pull
      tolerations:
        - operator: Exists
