deploy/mgmt/deployment-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angryduck-controller
  namespace: angryduck
  labels:
    app.kubernetes.io/env: mgmt
    app.kubernetes.io/name: angryduck
    app.kubernetes.io/component: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/env: mgmt
      app.kubernetes.io/name: angryduck
      app.kubernetes.io/component: controller
  template:
    metadata:
      labels:
        app.kubernetes.io/env: mgmt
        app.kubernetes.io/name: angryduck
        app.kubernetes.io/component: controller
    spec:
      imagePullSecrets:
        - name: gitlab-docker-registry
      containers:
        - name: controller
          image: registry.internal-registry.example.com/devops/generic/angry-duck-controller:1.4.1
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 20m
              memory: 16Mi
            limits:
              cpu: 150m
              memory: 32Mi
