deploy/mgmt/service-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: angryduck-controller
  namespace: angryduck
  labels:
    app.kubernetes.io/env: mgmt
    app.kubernetes.io/name: angryduck
    app.kubernetes.io/component: controller
spec:
  selector:
    app.kubernetes.io/env: mgmt
    app.kubernetes.io/name: angryduck
    app.kubernetes.io/component: controller
  ports:
    - name: http
      port: 8080
      targetPort: 8080
