deploy/mgmt/ingress-controller-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angryduck-webhook
  namespace: angryduck
  labels:
    app.kubernetes.io/env: mgmt
    app.kubernetes.io/name: angryduck
    app.kubernetes.io/component: controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /webhook/preheat
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: angryduck-mgmt.example.com
      http:
        paths:
          - path: /angryduck/webhook/preheat
            pathType: Exact
            backend:
              service:
                name: angryduck-controller
                port:
                  number: 8080
